adjust padding and margins for home page

--- a/backend/ai_blog_app/templates/index.html
+++ b/backend/ai_blog_app/templates/index.html
@@ -18,7 +18,7 @@
      </nav>
      <br>
      <div class=" pt-4">
-     <div class="p-3 mr-2 ml-2 bg-white rounded-lg shadow-md transition-transform transform hover:scale-105">
+     <div class="p-10 mt-10 m-20 bg-white rounded-lg shadow-md transition-transform transform hover:scale-105">
         <!-- Introduction Section -->
         <div class="text-center ">
             
