--- a/backend/ai_blog_app/templates/signup.html
+++ b/backend/ai_blog_app/templates/signup.html
@@ -13,9 +13,9 @@
             <h1 class = "text-3xl font-bold">AI Blog Generator</h1>
         </div>
         <div >
-            <a class="text-white cursor-pointer hover:underline pr-4">Signup</a>
+            <a href = "../signup" class="text-white cursor-pointer hover:underline pr-4">Signup</a>
             
-            <a class="text-white cursor-pointer hover:underline">Login</a>
+            <a href = "../login" class="text-white cursor-pointer hover:underline">Login</a>
         
         </div>
      </nav>
